syntax = "proto3";

package iamnande.cardmod.magic.v1;

option go_package = "github.com/iamnande/cardmod/pkg/api/magicv1;magicv1";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "iamnande/cardmod/magic/v1/magic.proto";

// Magic Service
service MagicAPI {

    // ListMagics lists all available magic resources.
    rpc ListMagics(ListMagicsRequest) returns (ListMagicsResponse) {
        option (google.api.http) = {
            get: "/v1/magics"
        };
    }

    // CreateMagic creates a new magic resource.
    rpc CreateMagic(CreateMagicRequest) returns (CreateMagicResponse) {
        option (google.api.http) = {
            post: "/v1/magics"
            body: "*"
        };
    }

    // DescribeMagic describes a single magic.
    rpc DescribeMagic(DescribeMagicRequest) returns (DescribeMagicResponse) {
        option (google.api.http) = {
            get: "/v1/magics/{magic_id}"
        };
    }

    // DeleteMagic deletes a magic resource.
    rpc DeleteMagic(DeleteMagicRequest) returns (DeleteMagicResponse) {
        option (google.api.http) = {
            delete: "/v1/magics/{magic_id}"
        };
    }

}

// ListMagicsRequest is the request model for ListMagics.
// TODO: pagination, filtering, sorting
message ListMagicsRequest {}

// ListMagicsResponse is the response model for ListMagics.
message ListMagicsResponse {

    // magics is the list of magics.
    repeated Magic magics = 1;

}

// CreateMagicRequest is the request model for CreateMagic.
message CreateMagicRequest {

    // name is the name of the card.
    string name = 1;

}

// CreateMagicResponse is the response model for CreateMagic.
message CreateMagicResponse {

    // magic is the magice entity that was created.
    Magic magic = 1;

}

// DescribeMagicRequest is the request model for DescribeMagic.
message DescribeMagicRequest {

    // magic_id is the ID of the magic to describe.
    string magic_id = 1 [(validate.rules).string.uuid = true];

}

// DescribeMagicResponse is the response model for DescribeMagic.
message DescribeMagicResponse {

    // magic is the magic entity that was described.
    Magic magic = 1;

}

// DeleteMagicRequest is the request model for DeleteMagic.
message DeleteMagicRequest {

    // magic_id is the ID of the magic to delete.
    string magic_id = 1 [(validate.rules).string.uuid = true];

}

// DeleteMagicResponse is the response model for DeleteMagic.
message DeleteMagicResponse {} // intentionally left empty